Fixing double scrolling due to gmaps iFrame in FF

--- a/scss/1_components/5_gmap/_gmap.scss
+++ b/scss/1_components/5_gmap/_gmap.scss
@@ -12,3 +12,6 @@ nav.overlay {
   height: 100%;
   z-index: 0 !important;
 }
+#ssIFrame_google {
+  display: none !important;
+}
